# liburing-bazel

./: .gitignore  BUILD.bazel  MODULE.bazel
src/: queue.c  register.c  setup.c  syscall.c  syscall.h  version.c
src/include/: liburing.h
